docs: update docs

--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/fewshot_bayesian_optimizer.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/fewshot_bayesian_optimizer.mdx
@@ -43,7 +43,7 @@ optimizer = FewShotBayesianOptimizer(
 )
 
 # Prepare dataset
-dataset = datasets.hotpot_300()
+dataset = datasets.hotpot(count=300)
 
 # Define metric and prompt (see docs for more options)
 def levenshtein_ratio(dataset_item, llm_output):
