--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/parameter_optimizer.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/parameter_optimizer.mdx
@@ -113,7 +113,7 @@ optimizer = ParameterOptimizer(
 )
 
 # Prepare dataset
-dataset = datasets.hotpot_300()
+dataset = datasets.hotpot(count=300)
 
 # Define metric
 def levenshtein_ratio(dataset_item, llm_output):
