--- a/sdks/opik_optimizer/notebooks/OpikOptimizerIntro.ipynb
+++ b/sdks/opik_optimizer/notebooks/OpikOptimizerIntro.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "import opik_optimizer\n",
     "\n",
-    "opik_dataset = opik_optimizer.datasets.hotpot_300()"
+    "opik_dataset = opik_optimizer.datasets.hotpot(count=300)"
    ]
   },
   {
@@ -613,7 +613,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">╭─ hotpot_300 (100 samples) ──────╮\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">╭─ hotpot (100 samples) ──────╮\n",
        "│                                 │\n",
        "│ <span style=\"font-weight: bold\">Total time:       </span> 00:00:49     │\n",
        "│ <span style=\"font-weight: bold\">Number of samples:</span> 100          │\n",
@@ -624,7 +624,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "╭─ hotpot_300 (100 samples) ──────╮\n",
+       "╭─ hotpot (100 samples) ──────╮\n",
        "│                                 │\n",
        "│ \u001b[1mTotal time:       \u001b[0m 00:00:49     │\n",
        "│ \u001b[1mNumber of samples:\u001b[0m 100          │\n",
