chore: gepa has new strategies, use the default

--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/gepa_optimizer.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/gepa_optimizer.mdx
@@ -116,7 +116,7 @@ The `optimize_prompt` method has the following parameters:
 <ParamField path="project_name" type="str" optional={true} default="Optimization" />
 <ParamField path="max_trials" type="int" optional={true} default="10">Maximum number of different prompts to test (default: 10)</ParamField>
 <ParamField path="reflection_minibatch_size" type="int" optional={true} default="3">Size of reflection minibatches (default: 3)</ParamField>
-<ParamField path="candidate_selection_strategy" type="str" optional={true} default="pareto">Strategy for candidate selection (default: "pareto")</ParamField>
+<ParamField path="candidate_selection_strategy" type="str" optional={true} default="pareto">Strategy for candidate selection (choose from "pareto", "current_best", or "epsilon_greedy"; default: "pareto")</ParamField>
 <ParamField path="skip_perfect_score" type="bool" optional={true} default="True">Skip candidates with perfect scores (default: True)</ParamField>
 <ParamField path="perfect_score" type="float" optional={true} default="1.0">Score considered perfect (default: 1.0)</ParamField>
 <ParamField path="use_merge" type="bool" optional={true} default="False">Enable merge operations (default: False)</ParamField>
