--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/openrouter.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/openrouter.mdx
@@ -56,7 +56,7 @@ OpenRouter provides access to a wide variety of models, including many open sour
 - [Google models](https://openrouter.ai/google) (Gemini Pro, Flash, Flash Thinking)
 - And many open source models
 
-You can find the complete list of available models in the [OpenRouter documentation](https://openrouter.ai/docs/overview/models).
+You can find the complete list of available models in the [OpenRouter documentation](https://openrouter.ai/models).
 
 ## Supported Methods
 
@@ -71,6 +71,6 @@ OpenRouter supports the following methods:
 ### Structured Outputs
 
 - `client.beta.chat.completions.parse()`: Only compatible with OpenAI models
-- For non-OpenAI models, see OpenRouter's [Structured Outputs documentation](https://openrouter.ai/docs/features/structured-outputs)
+- For non-OpenAI models, see OpenRouter's [Structured Outputs documentation](https://openrouter.ai/docs/docs/features/structured-outputs)
 
 For detailed information about available methods, parameters, and best practices, refer to the [OpenRouter API documentation](https://openrouter.ai/docs).
