--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_prompts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_prompts.mdx
@@ -69,3 +69,4 @@ result = optimizer.optimize_prompt(
 - [Define datasets](/agent_optimization/optimization/define_datasets)
 - [Define metrics](/agent_optimization/optimization/define_metrics)
 - [Chaining optimizers](/agent_optimization/advanced/chaining_optimizers)
+- [Avoiding overfitting](/agent_optimization/optimization/define_datasets#trainvalidation-splits) – Prevent your prompt from memorizing the training data by using separate validation datasets
