--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
@@ -51,7 +51,7 @@ examples, or tool interactions.
   </Accordion>
   <Accordion title="Dataset (for Optimization)">
     A collection of data items, typically with inputs and expected outputs (ground truth), used to guide and evaluate
-    the prompt optimization process. See [Datasets](/evaluation/manage_datasets) for more information.
+    the prompt optimization process. For best results, split your data into separate training and validation datasets—the optimizer uses the training dataset to analyze failures and generate improvements, then evaluates candidates on the validation dataset to prevent overfitting. See [Datasets](/evaluation/manage_datasets) and [Define datasets](/agent_optimization/optimization/define_datasets) for more information.
   </Accordion>
   <Accordion title="Optimization Run">
     A single execution of a prompt optimization process using a specific configuration. For example,
