--- a/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
@@ -79,31 +79,27 @@ import { Opik } from "opik";
 const opik = new Opik();
 
 // Update experiment name
-await opik.updateExperiment(
-  "experiment-id",
-  "Updated Experiment Name"
-);
+await opik.updateExperiment("experiment-id", {
+  name: "Updated Experiment Name"
+});
 
 // Update experiment configuration
-await opik.updateExperiment(
-  "experiment-id",
-  undefined,
-  {
+await opik.updateExperiment("experiment-id", {
+  experimentConfig: {
     model: "gpt-4",
     temperature: 0.7,
     promptTemplate: "Answer the following question: {question}"
   }
-);
+});
 
 // Update both name and configuration
-await opik.updateExperiment(
-  "experiment-id",
-  "Updated Experiment Name",
-  {
+await opik.updateExperiment("experiment-id", {
+  name: "Updated Experiment Name",
+  experimentConfig: {
     model: "gpt-4",
     temperature: 0.7
   }
-);
+});
 ```
 
 ## Update Experiment Scores
