--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/changelog.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/changelog.mdx
@@ -7,6 +7,7 @@ Stay current on Agent Optimizer updates. Each entry below reflects a version bum
 
 | Date | Version | Highlights |
 | --- | --- | --- |
+| **TBD** | `2.3.0` | Added validation dataset support across all optimizers to prevent overfitting, improved structured output parsing with better error handling, enhanced test infrastructure with parallel execution (pytest-xdist, pytest-profiling), upgraded style inference to use structured Pydantic models, improved token limit error messages, added JSON response cleanup utilities, enhanced Wikipedia search logging, refactored dataset size tests, added Makefile profiling target, and applied LiteLLM cost mapping workaround. [Commits →](https://github.com/comet-ml/opik/compare/02a6d9de4...HEAD) |
 | **2025-11-18** | `2.2.2` | Launched multimodal input support for Hierarchical Reflective Optimizer (images + text), restructured optimizer codebase into `algorithms/` package with stricter types, added manifest-based benchmarks with new datasets (HoVer, IFBench, PUPA), and enabled custom run naming. [Commits →](https://github.com/comet-ml/opik/compare/e8903c98843c14f87069ef80da02c53bf18e0cb9...7d545959ad198c3ba3a9474c5e9e18b4fe3b938d) |
 | **2025-10-31** | `2.2.1` | Hardened the GEPA optimizer with new candidate utilities, reporting fixes, and clearer trial warnings. [Commits →](https://github.com/comet-ml/opik/compare/54eeef28c7eb0ddfd25bd471c3e33d8c95d3a57f...e8903c98843c14f87069ef80da02c53bf18e0cb9) |
 | **2025-10-23** | `2.2.0` | Standardized optimizer public methods, reorganized algorithm examples under `scripts/optimizer_algorithms/`, and removed legacy MIPRO/test cruft. [Commits →](https://github.com/comet-ml/opik/compare/3274ccf22f6c9fd0ec1d509d2a504832dae2fb61...54eeef28c7eb0ddfd25bd471c3e33d8c95d3a57f) |
